--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </div>
             <div class="col-md-3 text-center">
               <img src="assets/images/springer%20Logo.png" alt="Sponsored" style="width:250px;">
-              <h5 class="text-center">(Approved)
+              <h5 class="text-center">(Waiting for Approval)
           </h5>
             </div>
       </div>
