--- a/index.html
+++ b/index.html
@@ -1051,10 +1051,10 @@ information to <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" da
         <br>
        </div>
       <div class="col-md-12">
-        <p>All submissions, including Regular papers, Short papers, and other have to be made through the EasyChair Conference Management System. Those who do not have an EasyChair account they need to create one.
+        <p>All submissions, including Regular papers, Short papers, and other have to be made through the CONFERENCE MANAGEMENT TOOLKIT (CMT). Those who do not have an CONFERENCE MANAGEMENT TOOLKIT (CMT) account they need to create one.
         </p>
         <p>
-          <b>NOTE:</b> Prospective authors are invited to submit full (original) research papers; which are NOT submitted/published/under consideration anywhere in other conferences/journals; EasyChair MT Conference Management System or via email <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="6a03090b030e192a19180f130b19440b09440304">[email&#160;protected]</a>
+          <b>NOTE:</b> Prospective authors are invited to submit full (original) research papers; which are NOT submitted/published/under consideration anywhere in other conferences/journals; CONFERENCE MANAGEMENT TOOLKIT (CMT) or via email <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="6a03090b030e192a19180f130b19440b09440304">[email&#160;protected]</a>
         </p>
         <p>
           All the paper must conform to specific format and must be submitted as Microsoft Word DOC or DOCX format only not exceeding stipulated pages including text, figures, tables and references.
