--- a/index.html
+++ b/index.html
@@ -1062,8 +1062,8 @@ information to <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" da
 
 <!-- / .container -->
 
-    <!--     <button class="butt mt-4"><a href="https://easychair.org/conferences/?conf=icaids2022">Submission Link</a>
-        </button> -->
+    <button class="butt mt-4"><a href="https://cmt3.research.microsoft.com/ICAIDS2023">Submission Link</a>
+        </button>
         <button class="butt mt-4"><a href="assets/images/splnproc1703.docx">Paper Template</a>
         </button>
       </div>
