--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@ University of North Florida, Jacksonville USA
           <a class="nav-link active" data-toggle="tab" href=".html" role="tab" aria-controls="home1" aria-selected="true">Chief Patrons</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="-2.html" role="tab" aria-controls="profile1" aria-selected="false">Patron</a>
+          <a class="nav-link" data-toggle="tab" href="-2.html" role="tab" aria-controls="profile1" aria-selected="true">Patron</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="-3.html" role="tab" aria-controls="contact1" aria-selected="false">General Chairs</a>
