--- a/index.html
+++ b/index.html
@@ -1468,9 +1468,9 @@ University of North Florida, Jacksonville USA
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
         <ul>
-          <li> Organizing Team
+          <li> The Organizing Team
             <br>
-            <b>Mr. Samriddha Basu</b> 
+            <b>ICAIDS-2023</b> 
             <br>
             Contact numbers: <a href="tel:+919064583098" title="Contact 1" style="color: black;">+91 9064 583098</a> 
             <br>
