--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@ Codes, Encoding Schemes, Image Processing with SNN</p>
         </tr>
         <tr>
           <td>Submission Closing Date</td>
-          <td>15<sup>th</sup> August, 2023</td>
+         <s> <td>15<sup>th</sup> August, 2023</td> <s>
         </tr>
         <tr>
           <td>Acceptance Notification for Final Papers</td>
