--- a/index.html
+++ b/index.html
@@ -818,6 +818,7 @@ Codes, Encoding Schemes, Image Processing with SNN</p>
         <tr>
           <td>Submission Closing Date</td>
          <s> <td>15<sup>th</sup> August, 2023</td> <s>
+           <td>31<sup>th</sup> August, 2023</td>
         </tr>
         <tr>
           <td>Acceptance Notification for Final Papers</td>
