--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@ Codes, Encoding Schemes, Image Processing with SNN</p>
         </tr>
         <tr>
           <td>Submission Closing Date</td>
-          <del>td>15<sup>th</sup> August, 2023</td></del>
+          <td><del>15<sup>th</sup> August, 2023</del></td>
           <td>31<sup>th</sup> August, 2023</td>
         </tr>
         <tr>
