--- a/index.html
+++ b/index.html
@@ -818,7 +818,8 @@ Codes, Encoding Schemes, Image Processing with SNN</p>
         <tr>
           <td>Submission Closing Date</td>
           <td><del>15<sup>th</sup> August, 2023</del></td>
-          <td>31<sup>th</sup> August, 2023</td>
+          <td><del>31<sup>th</sup> August, 2023</del></td>
+          <td>31<sup>th</sup> September, 2023</td>
         </tr>
         <tr>
           <td>Acceptance Notification for Final Papers</td>
@@ -830,7 +831,7 @@ Codes, Encoding Schemes, Image Processing with SNN</p>
         </tr>
         <tr>
           <td>Conference Dates</td>
-          <td>29<sup>th</sup>-30<sup>th</sup> September, 2023</td>
+          <td>29<sup>th</sup>-30<sup>th</sup> December, 2023</td>
         </tr>
       </table>
      
