--- a/index.html
+++ b/index.html
@@ -823,7 +823,8 @@ Codes, Encoding Schemes, Image Processing with SNN</p>
         </tr>
         <tr>
           <td>Acceptance Notification for Final Papers</td>
-          <td>30<sup>th</sup> August, 2023</td>
+          <td><del>30<sup>th</sup> August, 2023</del>del</td>
+          <td>31<sup>th</sup> October, 2023</td>
         </tr>
         <tr>
           <td>Camera Ready Copy Deadline</td>
