--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@ Codes, Encoding Schemes, Image Processing with SNN</p>
  
 
 
-  <!-- <div class="container">
+<div class="container">
     <div class="row justy-content-center">
       <div class="col-lg-12 ">
         <h2>Payment for Registration Fee:
@@ -951,7 +951,7 @@ Codes, Encoding Schemes, Image Processing with SNN</p>
                   <p> Participants can use wire transfer mode or UPI ID By
 Scanning QR code for paying registration fee:
         </p>
- <p><img src="paymentupi.jpg" alt="sreyas" width="200" height="335">
+ <p><img src="town.png" alt="sreyas" width="200" height="335">
 </p>
 <br>
         <p>1. Wire Transfer:Participants/authors paying registration fees through Wire Transfer should
