--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@ use the following information and email their bank transaction slip and relevant
 information to <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="afc6cccec6cbdcefdcddcad6cedc81cecc81c6c1">[email&#160;protected]</a>
         </p>
         <br>
-        <p><b><h5>Online Transfer Within INDIA</h5></b></p>
+         <!--  <p><b><h5>Online Transfer Within INDIA</h5></b></p>
         <p> <b>Bank A/c: </b>50100327261052
         </p>
          <p> <b>Name of the Bank: </b>HDFC Bank
@@ -979,7 +979,7 @@ information to <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" da
         <p> <b>Type of Account:</b> Saving Account
         </p>
         
-         <ul>
+         <ul> -->
              <li>Kindly input transaction remark "ICAIDS-2023 followed by Paper ID" eg. (ICAIDS-2023-Paper ID-100)</li>
         </ul>
         <br>
@@ -990,7 +990,7 @@ information to <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" da
           </div>
     </div>
     </div>
-    </div> -->
+    </div> 
 </section>
 <!-- / .container -->
 <section class="section" id="dates">
