--- a/index.html
+++ b/index.html
@@ -958,9 +958,9 @@ Scanning QR code for paying registration fee:
 use the following information and email their bank transaction slip and relevant
 information to <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="afc6cccec6cbdcefdcddcad6cedc81cecc81c6c1">[email&#160;protected]</a>
         </p>
-        <br>
-         <!--  <p><b><h5>Online Transfer Within INDIA</h5></b></p>
-        <p> <b>Bank A/c: </b>50100327261052
+        <!--   <br>
+      <p><b><h5>Online Transfer Within INDIA</h5></b></p> 
+        <p> <b>Bank A/c: </b>50100327261052 
         </p>
          <p> <b>Name of the Bank: </b>HDFC Bank
         </p>
@@ -979,10 +979,10 @@ information to <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" da
         <p> <b>Type of Account:</b> Saving Account
         </p>
         
-         <ul> -->
+         <ul> 
              <li>Kindly input transaction remark "ICAIDS-2023 followed by Paper ID" eg. (ICAIDS-2023-Paper ID-100)</li>
         </ul>
-        <br>
+        <br> -->
        <p> 2. Wire Transfer from OUTSIDE INDIA (Only for FOREIGN AUTHORS)</p>
                 </ul>
               </div>
