--- a/index.html
+++ b/index.html
@@ -951,7 +951,9 @@ Codes, Encoding Schemes, Image Processing with SNN</p>
                   <p> Participants can use wire transfer mode or UPI ID By
 Scanning QR code for paying registration fee:
         </p>
- <p><img src="town.png" alt="sreyas" width="200" height="335">
+ <p><img src="town.png" alt="sreyas" width="200" height="335"></p>
+   <p> <button class="butt mt-4"><a href="https://www.townscript.com/e/2nd-international-conference-on-artificial-intelligence-and-data-science-icaids2023-311032">Payment Link</a>
+        </button>
 </p>
 <br>
         <p>1. Wire Transfer:Participants/authors paying registration fees through Wire Transfer should
