--- a/index.html
+++ b/index.html
@@ -310,12 +310,12 @@ Second Semester Commences from 16th December, 2019 – Class work will start for
           <div class="col-lg-12 text-center mb-5">
             <h2 class="mb-3">WELCOME
             </h2>
-            <p style="width: 70%; margin: 0 auto;">The 2<sup>nd</sup> International Conference on Artificial Intelligence and Data Science (ICAIDS-2023) will be held in the beautiful city of Hyderabad during 29<sup>th</sup>-30<sup>th</sup> September 2023 Organized by Department Of Computer Science & Engineering, CSE (AI&ML) and CSE (DS) in Sreyas Institute Of Engineering and Technology, Hyderabad, Telangana.
+            <p style="width: 70%; margin: 0 auto;">The 2<sup>nd</sup> International Conference on Artificial Intelligence and Data Science (ICAIDS-2023) will be held in the beautiful city of Hyderabad during 29<sup>th</sup>-30<sup>th</sup> December 2023 Organized by Department Of Computer Science & Engineering, CSE (AI&ML) and CSE (DS) in Sreyas Institute Of Engineering and Technology, Hyderabad, Telangana.
             </p>
           </div>
           <div class="col-lg-6 " style="text-align: justify;">
             <p>This conference is meant for researchers from academia, industries and research & development organizations all over the globe interested in the areas of Artificial Intelligence and Data Science. It will put special emphasis on the participations of Ph.D students, Postdoctoral fellows and other young researchers from all over the world. It would be beneficial to bring together a group of experts from diverse fields to discuss recent progress and to share ideas on open platform and also promote global collaborations. The conference will feature world-class keynote speakers in the main areas.</p>
-            <p>We warmly welcome prospective authors to submit their latest research results to ICAIDS-2023, looking forward to meeting you at Sreyas Institute Of Engineering and Technology, Hyderabad, Telangana, India during 29<sup>th</sup>-30<sup>th</sup> September 2023.</p>
+            <p>We warmly welcome prospective authors to submit their latest research results to ICAIDS-2023, looking forward to meeting you at Sreyas Institute Of Engineering and Technology, Hyderabad, Telangana, India during 29<sup>th</sup>-30<sup>th</sup> December2023.</p>
 
           </div>
            <div class="col-lg-6 ">
@@ -343,7 +343,7 @@ Sreyas Institute, located in the heart of the city, is the result of deliberatio
         <div class="col-lg-12 ">
           <h2 class="text-white mb-3">Call for Papers
           </h2>
-          <p>The 2<sup>nd</sup> International Conference on Artificial Intelligence and Data Science (ICAIDS-2023) will be held at Sreyas Institute Of Engineering and Technology, Hyderabad, Telangana, India during <b> 29<sup>th</sup>-30<sup>th</sup> September 2023</b></p>
+          <p>The 2<sup>nd</sup> International Conference on Artificial Intelligence and Data Science (ICAIDS-2023) will be held at Sreyas Institute Of Engineering and Technology, Hyderabad, Telangana, India during <b> 29<sup>th</sup>-30<sup>th</sup> December2023</b></p>
           <p>
           </p>The conference will have plenary lectures followed by parallel sessions. Plenary lectures will be delivered by eminent personalities of repute to introduce the theme of the conference. Conference is to provide a platform to PG students, Researchers, Young aspiring Engineers & Academicians to present their research findings of their respective domains of knowledge and share ideas and Views.
           </p>
