--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ Second Semester Commences from 16th December, 2019 – Class work will start for
           </div>
           <div class="col-lg-6 " style="text-align: justify;">
             <p>This conference is meant for researchers from academia, industries and research & development organizations all over the globe interested in the areas of Artificial Intelligence and Data Science. It will put special emphasis on the participations of Ph.D students, Postdoctoral fellows and other young researchers from all over the world. It would be beneficial to bring together a group of experts from diverse fields to discuss recent progress and to share ideas on open platform and also promote global collaborations. The conference will feature world-class keynote speakers in the main areas.</p>
-            <p>We warmly welcome prospective authors to submit their latest research results to ICAIDS-2023, looking forward to meeting you at Sreyas Institute Of Engineering and Technology, Hyderabad, Telangana, India during 29<sup>th</sup>-30<sup>th</sup> December2023.</p>
+            <p>We warmly welcome prospective authors to submit their latest research results to ICAIDS-2023, looking forward to meeting you at Sreyas Institute Of Engineering and Technology, Hyderabad, Telangana, India during 29<sup>th</sup>-30<sup>th</sup> December 2023.</p>
 
           </div>
            <div class="col-lg-6 ">
