--- a/index.html
+++ b/index.html
@@ -1748,7 +1748,7 @@ University of North Florida, Jacksonville USA
 </section>
 <!-- FOOTER
 ================================================== -->
-<footer style="position: fixed; bottom: 0; width: 100%; background-color: #f8f9fa; padding: 0px 0; box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);">
+<footer style="bottom: 0; width: 100%; background-color: #f8f9fa; padding: 0px 0; box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);">
   <div class="footer" id="footer">
     <div class="container">
       <div class="row">
