--- a/index.html
+++ b/index.html
@@ -1202,7 +1202,7 @@ University of North Florida, Jacksonville USA
         </div>
         <div id="ProgramChair" class="tab-pane fade">
           <br>
-          <p>Prof. Dr .S. Sai Satyanarayana Reddy, CSE , Sreyas Institute of Engineering and Technology, Hyderabad, India.
+          <p>Dr. K.Sagar, Professor & Principal, Sreyas Institute of Engineering and Technology, Hyderabad, India.
           </p>
           <p>Dr. Ashwani Kumar, HOD CSE (AI & ML), SIET, Hyderabad.</p>
           <p> Dr. S. Abdul Nabi, HOD, CSE Professor, SIET, Hyderabad.</p>
