--- a/index.html
+++ b/index.html
@@ -1308,8 +1308,8 @@ University of North Florida, Jacksonville USA
           <br>
           <p>Prof. Dr .S. Sai Satyanarayana Reddy, CSE , Sreyas Institute of Engineering and Technology, Hyderabad, India.
           </p>
-            <p>Dr. Ashwani Kumar, HOD CSE (AI & ML), SIET, Hyderabad.</p>
-            <p>          Dr. S. Abdul Nabi, HOD, CSE Professor, SIET, Hyderabad.</p>
+            <p>Dr. Ashwani Kumar, Associate Professor</p>
+           
 
 
 </div>
@@ -1330,7 +1330,7 @@ University of North Florida, Jacksonville USA
         <div class="Conveners tab-pane fade" role="tabpanel" aria-labelledby="contact-tab">
           <br>
 
-          <p>Dr. V.Biksham Professor, SIET, Hyderabad</p>
+          <p>Dr. A. Swathi, Associate Professor, Dept of AI&ML, SIET, HYD</p>
         </div>
 
         <div class="coConveners tab-pane fade" role="tabpanel" aria-labelledby="contact-tab">
