--- a/index.html
+++ b/index.html
@@ -1577,9 +1577,8 @@ University of North Florida, Jacksonville USA
           <br>
         </div>
         <div id="ConferenceChairs" class="tab-pane fade">
-          <br>
-          <p>Prof. Zuopeng Justin Zhang, Coggin College of Business, University of North Florida, Jacksonville USA</p>
-          <p> Prof. Mohammed Usman, King Khalid University, Saudi Arabia </p>
+          <be>
+         <p> (Prof.) Dr. Gautam Srivastava, Brandon University, Canada </p>
           
         </div>
        
