--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@ information to <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" da
 <!-- / .container -->
 </section>
 <section class="section" id="grey">
-<!--  <div class="container">
+<div class="container">
     <div class="row justy-content-center text-white">
       <div class="col-lg-12 ">
         <h2 class="text-white mb-3">Keynote Speakers
@@ -1130,7 +1130,7 @@ University of North Florida, Jacksonville USA
           </div>
           <h5 class=" mt-4 mb-3 text-white text-center">Prof. Pradeep Kumar Gupta, JUIT, India,
           </h5>
-        </div>  -->
+        </div>
       <!-- <div class="col-lg-2 col-md-6 mb-lg-0 mb-5"> -->
        <!--   <div class="avatar mx-auto">
             <img src="./assets/images/fister.jpeg" class="rounded-circle z-depth-1"
