--- a/index.html
+++ b/index.html
@@ -1091,19 +1091,18 @@ information to <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" da
         
          <div class="col-lg-2 col-md-6 mb-lg-0 mb-5">
          <div class="avatar mx-auto">
-         <img src="assets/images/JustinZhang.jpg" class="rounded-circle z-depth-1"
+         <img src="assets/images/anand.jpg" class="rounded-circle z-depth-1"
                  alt="Mr. Vinay Kumar Kottapalli, CEO, Datawise">
           </div>
-          <h5 class="mt-4 mb-3 text-white text-center">Zuopeng Justin Zhang, Coggin College of Business,
-University of North Florida, Jacksonville USA
+          <h5 class="mt-4 mb-3 text-white text-center"> Anand Nayar, Professor, Duy Tan University, Vietnam
           </h5>
         </div>
       <div class="col-lg-2 col-md-6 mb-lg-0 mb-5">
           <div class="avatar mx-auto">
-            <img src="assets/images/Johan.png" class="rounded-circle z-depth-1"
+            <img src="assets/images/sidd.jpg" class="rounded-circle z-depth-1"
                  alt="Prof. Johan DEBAYLE, MINES Saint-Etienne, France">
           </div>
-          <h5 class=" mt-4 mb-3 text-white text-center">Prof. Johan DEBAYLE, MINES Saint-Etienne, France
+          <h5 class=" mt-4 mb-3 text-white text-center">S. SHITHARTH: Professor,  Leeds Beckett University, England
           </h5>
         </div>
         <div class="col-lg-2 col-md-6 mb-lg-0 mb-5">
