--- a/index.html
+++ b/index.html
@@ -1107,10 +1107,10 @@ information to <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" da
         </div>
         <div class="col-lg-2 col-md-6 mb-lg-0 mb-5">
           <div class="avatar mx-auto">
-            <img src="assets/images/Usman.jpg" class="rounded-circle z-depth-1"
+            <img src="assets/images/aa.png" class="rounded-circle z-depth-1"
                  alt="Dr. Mohammed Usman, KKU, Saudi Arabia">
           </div>
-          <h5 class=" mt-4 mb-3 text-white text-center">Dr. Mohammed Usman, KKU, Saudi Arabia
+          <h5 class=" mt-4 mb-3 text-white text-center">Anand Paul, Full Professor, Kyungpook National University, South Korea
           </h5>
         </div>
         <div class="col-lg-2 col-md-6 mb-lg-0 mb-5">
