--- a/index.html
+++ b/index.html
@@ -1091,24 +1091,21 @@ information to <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" da
         
          <div class="col-lg-2 col-md-6 mb-lg-0 mb-5">
          <div class="avatar mx-auto">
-         <img src="assets/images/anand.jpg" class="rounded-circle z-depth-1"
-                 alt="Mr. Vinay Kumar Kottapalli, CEO, Datawise">
+         <img src="assets/images/anand.jpg" class="rounded-circle z-depth-1" alt="no-image">
           </div>
           <h5 class="mt-4 mb-3 text-white text-center"> Anand Nayar, Professor, Duy Tan University, Vietnam
           </h5>
         </div>
       <div class="col-lg-2 col-md-6 mb-lg-0 mb-5">
           <div class="avatar mx-auto">
-            <img src="assets/images/sidd.jpg" class="rounded-circle z-depth-1"
-                 alt="Prof. Johan DEBAYLE, MINES Saint-Etienne, France">
+            <img src="assets/images/sidd.jpg" class="rounded-circle z-depth-1" alt="no-image">
           </div>
           <h5 class=" mt-4 mb-3 text-white text-center">S. SHITHARTH: Professor,  Leeds Beckett University, England
           </h5>
         </div>
         <div class="col-lg-2 col-md-6 mb-lg-0 mb-5">
           <div class="avatar mx-auto">
-            <img src="assets/images/aa.png" class="rounded-circle z-depth-1"
-                 alt="Dr. Mohammed Usman, KKU, Saudi Arabia">
+            <img src="assets/images/aa.png" class="rounded-circle z-depth-1" alt="no-image">
           </div>
           <h5 class=" mt-4 mb-3 text-white text-center">Anand Paul, Full Professor, Kyungpook National University, South Korea
           </h5>
